--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -64,7 +64,7 @@ COMMAND_BOT_UPTIME: "Аптайм"
 COMMAND_BOT_RAM_TOTAL: "Всего ОЗУ"
 COMMAND_BOT_RAM_MAX: "Макс. ОЗУ"
 COMMAND_BOT_RAM_USED: "Используется ОЗУ"
-COMMAND_BOT_RESTART: "Перезагрузить бот"
+COMMAND_BOT_RESTART: "Перезагрузить"
 COMMAND_BOT_RAM_MEASURE: "мб."
 COMMAND_BOT_CORE: "Ядро"
 COMMAND_BOT_MODULES: "модули"
