--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -32,6 +32,8 @@ ERROR_SPECIFY_SERVER_IP: "Укажите IP сервера!"
 ERROR_SPECIFY_PHONE: "Укажите номер телефона!"
 ERROR_SPECIFY_TEXT: "Укажите текст!"
 ERROR_SPECIFY_PLAYER_NAME: "Укажите никнейм игрока!"
+ERROR_SPECIFY_URL: "Укажите URL!"
+ERROR_URL_NOT_FOUND_SPECIFY_URL: "В сообщении не найден URL, пример: /short [URL]"
 
 ERROR_INCORRECT_IP: "Указан некорректный IP, перепроверьте его"
 ERROR_INVALID_INT: "Указано неверное число!"
@@ -144,6 +146,12 @@ COMMAND_QR_TEXT: "Текст в QR-коде"
 COMMAND_QR_DISABLED_ON_CHAT: "Данная команда отключена в этом чате, так как он создан от имени сообщества"
 
 COMMAND_SAY_DESCRIPTION: "Написать сообщение от имени бота"
+
+COMMAND_SHORT_DESCRIPTION: "Сократить ссылку разными сервисами"
+COMMAND_SHORT_SELECT_SERVICE: "Выберите сервис, через который сократить ссылку"
+COMMAND_SHORT_UNKNOWN_SERVICE: "Неизвестный сервис, доступные: clck/vkcc"
+COMMAND_SHORT_ERROR: "Не удалось сократить ссылку, попробуйте еще раз"
+COMMAND_SHORT_SHORTED_URL: "Сокращенная ссылка"
 
 COMMAND_TL_DESCRIPTION: "Информация о рекламируемых серверах в TLauncher"
 COMMAND_TL_TEXT: "Рекламируемые сервера TLauncher"
