--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -146,6 +146,14 @@ COMMAND_MCPLAYER_DESCRIPTION: "Информация об игроке Minecraft"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<неизвестно>"
 COMMAND_MCPLAYER_VIME_INFO: "Vime-информация"
 
+COMMAND_MCSTATS_DESCRIPTION: "Статистика онлайна сервера Minecraft"
+COMMAND_MCSTATS_DATA_WILL_BE_SOON: "Этот сервер был добавлен недавно, статистика доступна через 10 минут после добавления"
+COMMAND_MCSTATS_ONLINE_CURRENT: "Текущий онлайн"
+COMMAND_MCSTATS_ONLINE_24H: "Онлайн сутки назад в это время"
+COMMAND_MCSTATS_ONLINE_AVERAGE_24: "Средний суточный онлайн"
+COMMAND_MCSTATS_ONLINE_MAX_24: "Рекорд онлайна за сутки"
+COMMAND_MCSTATS_ONLINE_MAX: "Рекорд онлайна за все время"
+
 COMMAND_PHONE_DESCRIPTION: "Информация о номере телефона"
 COMMAND_PHONE_UNAVAILABLE: "Данная функция недоступна, попробуйте через 1 час"
 COMMAND_PHONE_LOCATION: "Локация"
