--- a/lang/lang_en.yml
+++ b/lang/lang_en.yml
@@ -145,6 +145,14 @@ COMMAND_MCPLAYER_DESCRIPTION: "Minecraft player information"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<unknown>"
 COMMAND_MCPLAYER_VIME_INFO: "Vime information"
 
+COMMAND_MCSTATS_DESCRIPTION: "Minecraft server online statistics"
+COMMAND_MCSTATS_DATA_WILL_BE_SOON: "This server was added recently, statistics are available 10 minutes after adding"
+COMMAND_MCSTATS_ONLINE_CURRENT: "Current online"
+COMMAND_MCSTATS_ONLINE_24H: "Online 24 hours ago at this time"
+COMMAND_MCSTATS_ONLINE_AVERAGE_24: "Average daily online"
+COMMAND_MCSTATS_ONLINE_MAX_24: "Online record for the day"
+COMMAND_MCSTATS_ONLINE_MAX: "All time online record"
+
 COMMAND_PHONE_DESCRIPTION: "Phone number information"
 COMMAND_PHONE_UNAVAILABLE: "This function is unavailable, try again in 1 hour"
 COMMAND_PHONE_LOCATION: "Location"
