--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -80,6 +80,7 @@ COMMAND_BOT_RESTART: "Перезагрузить"
 COMMAND_BOT_RAM_MEASURE: "мб."
 COMMAND_BOT_CORE: "Ядро"
 COMMAND_BOT_MODULES: "модули"
+COMMAND_BOT_VERSION: "Версия"
 
 COMMAND_CONVIP_DESCRIPTION: "Конвертировать IPv4 в десятеричный"
 COMMAND_CONVIP_DECIMAL: "Десятеричный IP"
