--- a/lang/lang_en.yml
+++ b/lang/lang_en.yml
@@ -79,6 +79,7 @@ COMMAND_BOT_RESTART: "Restart"
 COMMAND_BOT_RAM_MEASURE: "mb."
 COMMAND_BOT_CORE: "Core"
 COMMAND_BOT_MODULES: "modules"
+COMMAND_BOT_VERSION: "Version"
 
 COMMAND_CONVIP_DESCRIPTION: "Convert IPv4 to decimal"
 COMMAND_CONVIP_DECIMAL: "Decimal IP"
