--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -170,6 +170,11 @@ COMMAND_MCPLAYER_DESCRIPTION: "Информация об игроке Minecraft"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<неизвестно>"
 COMMAND_MCPLAYER_VIME_INFO: "Vime-информация"
 
+COMMAND_MCSA_USAGE: "Использование:\n\n| /mcsa info <ip-адрес> - информация о сервере\n| /mcsa alias <ip-адрес> <алиас> - установить алиас\n/mcsa owner <ip-адрес> <упоминание/ответ на сообщение> - установить нового владельца"
+COMMAND_MCSA_SERVER_INFO: "Информация о сервере (%s)\n\n| ID: %d\n| Добавлен: %s\n| Алиас: «%s»\n| Владелец: %d"
+COMMAND_MCSA_ALIAS_CHANGED: "Новый алиас успешно установлен!"
+COMMAND_MCSA_OWNER_CHANGED: "Новый владелец успешно установлен!"
+
 COMMAND_MCSTATS_DESCRIPTION: "Статистика онлайна сервера Minecraft"
 COMMAND_MCSTATS_DATA_WILL_BE_SOON: "Этот сервер был добавлен недавно, статистика доступна через 10 минут после добавления"
 COMMAND_MCSTATS_CREATING: "Создание графика, ожидайте..."
