--- a/lang/lang_ua.yml
+++ b/lang/lang_ua.yml
@@ -171,6 +171,7 @@ COMMAND_MCPLAYER_VIME_INFO: "Vime-інформація"
 
 COMMAND_MCSTATS_DESCRIPTION: "Статистика онлайну сервера Minecraft"
 COMMAND_MCSTATS_DATA_WILL_BE_SOON: "Цей сервер було додано нещодавно, статистика доступна через 10 хвилин після додавання"
+COMMAND_MCSTATS_DATA_OLD: "Немає даних для цього сервера за 24 години, можливо, він недоступний, або сталася помилка під час отримання даних"
 COMMAND_MCSTATS_CREATING: "Створення графіка, очікуйте..."
 COMMAND_MCSTATS_ONLINE_CURRENT: "Поточний онлайн"
 COMMAND_MCSTATS_ONLINE_24H: "Онлайн добу тому в цей час"
