errors on mcping

--- a/lang/lang_ru.yml
+++ b/lang/lang_ru.yml
@@ -166,6 +166,10 @@ COMMAND_MCPING_PROTOCOL: "Протокол"
 COMMAND_MCPING_ONLINE: "Онлайн"
 COMMAND_MCPING_MOJANG_BAN: "Бан Mojang"
 COMMAND_MCPING_MOTD: "MOTD"
+COMMAND_MCPING_CLOSED: "Сервер предварительно закрыл соединение"
+COMMAND_MCPING_INVALID_PACKET: "Сервер вернул некорректный пакет"
+COMMAND_MCPING_INVALID_VALUE: "Сервер вернул некорректный (пустой) ответ"
+COMMAND_MCPING_INVALID_JSON: "Сервер вернул некорректный JSON"
 
 COMMAND_MCPLAYER_DESCRIPTION: "Информация об игроке Minecraft"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<неизвестно>"
