errors on mcping

--- a/lang/lang_en.yml
+++ b/lang/lang_en.yml
@@ -163,6 +163,10 @@ COMMAND_MCPING_PROTOCOL: "Protocol"
 COMMAND_MCPING_ONLINE: "Online"
 COMMAND_MCPING_MOJANG_BAN: "Mojang Ban"
 COMMAND_MCPING_MOTD: "MOTD"
+COMMAND_MCPING_CLOSED: "Server has previously closed the connection"
+COMMAND_MCPING_INVALID_PACKET: "Server returned an invalid packet"
+COMMAND_MCPING_INVALID_VALUE: "The server returned an invalid (empty) response"
+COMMAND_MCPING_INVALID_JSON: "Server returned an invalid JSON"
 
 COMMAND_MCPLAYER_DESCRIPTION: "Minecraft player information"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<unknown>"
