errors on mcping

--- a/lang/lang_ua.yml
+++ b/lang/lang_ua.yml
@@ -164,6 +164,10 @@ COMMAND_MCPING_PROTOCOL: "Протокол"
 COMMAND_MCPING_ONLINE: "Онлайн"
 COMMAND_MCPING_MOJANG_BAN: "Бан Mojang"
 COMMAND_MCPING_MOTD: "MOTD"
+COMMAND_MCPING_CLOSED: "Сервер попередньо закрив з'єднання"
+COMMAND_MCPING_INVALID_PACKET: "Сервер повернув некоректний пакет"
+COMMAND_MCPING_INVALID_VALUE: "Сервер повернув некоректну (порожню) відповідь"
+COMMAND_MCPING_INVALID_JSON: "Сервер повернув некоректний JSON"
 
 COMMAND_MCPLAYER_DESCRIPTION: "Інформація про гравця Minecraft"
 COMMAND_MCPLAYER_DATEREG_UNKNOWN: "<невідомо>"
